better spacing for reactions, fix comment z-indexing

--- a/src/app/components/activity/feed/event-item/event-item.styl
+++ b/src/app/components/activity/feed/event-item/event-item.styl
@@ -1,11 +1,16 @@
 @import '../variables'
 @import '~styles-lib/mixins'
 
-.-controls-buffer:last-of-type
-	padding-bottom: $-item-padding-xs-v
+.-controls-buffer
+	display: flex
+	justify-content: flex-start
 
-	@media $media-sm-up
-		padding-bottom: $-item-padding-v
+	&:last-of-type
+		> .-controls-buffer-inner
+			padding-bottom: $-item-padding-xs-v
+
+			@media $media-sm-up
+				padding-bottom: $-item-padding-v
 
 .page-cut
 	@media $media-sm-up
